--- a/docs/installation_and_basic_usage.ipynb
+++ b/docs/installation_and_basic_usage.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "!pip install stactools-ephemeral"
+    "!pip install stactools-can-flood"
    ],
    "outputs": [],
    "metadata": {}
@@ -67,7 +67,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "!stac ephemeral --help"
+    "!stac can-flood --help"
    ],
    "outputs": [],
    "metadata": {}
@@ -83,7 +83,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "!stac ephemeral create-item --help"
+    "!stac can-flood create-item --help"
    ],
    "outputs": [],
    "metadata": {}
@@ -107,7 +107,7 @@
    "execution_count": null,
    "source": [
     "# Alter these with examples to match your package\n",
-    "from stactools.ephemeral import stac, cog\n",
+    "from stactools.can_flood import stac, cog\n",
     "\n",
     "stac.create_item()\n",
     "stac.create_collection()\n",
